Fix logo visibility in light/dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ body {
 }
 
 .navbar #logo img {
-  display: block;
+  display: none;
   width: 64px;
 }
 
